--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
             <img src="img/0.jpg" alt="Фін, Краш, Луна - Герої СилаВолії" class="hero-image">
 
             <div class="cta-group">
-                <a href="adventures.html" class="cta-button">ПОЧАТИ ПРИГОДУ</a>
-                <a href="heroes.html" class="cta-button">ПОЗНАЙОМСЯ З ГЕРОЯМИ</a>
+				 <a href="heroes.html" class="cta-button">ПОЗНАЙОМСЯ З ГЕРОЯМИ</a>
+				 <a href="world.html" class="cta-button">СИЛАВОЛІЯ</a>
+				 <a href="adventures.html" class="cta-button">ПОЧАТИ ПРИГОДУ</a>
             </div>
         </div>
     </header>
