--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <img src="img/0.jpg" alt="Фін, Краш, Луна - Герої СилаВолії" class="hero-image">
 
             <div class="cta-group">
-				 <a href="heroes.html" class="cta-button">ПОЗНАЙОМСЯ З ГЕРОЯМИ</a>
+				 <a href="heroes.html" class="cta-button">ГЕРОЇ</a>
 				 <a href="world.html" class="cta-button">СИЛАВОЛІЯ</a>
 				 <a href="adventures.html" class="cta-button">ПОЧАТИ ПРИГОДУ</a>
             </div>
