--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             <div class="cta-group">
                 <a href="heroes.html"     class="cta-button">  ГЕРОЇ  </a>
-				<a href="adventures.html" class="cta-button">СИЛАВОЛІЯ</a>
+				<a href="world.html" class="cta-button">СИЛАВОЛІЯ</a>
 				<a href="adventures.html" class="cta-button"> ПРИГОДИ </a>
             </div>
         </div>
