--- a/school.html
+++ b/school.html
@@ -234,6 +234,7 @@
 <body>
 
     <header class="school-header section">
+	      
         <div class="container">
             <h1>ШКОЛА «ШЛЯХДОМРІЙ»</h1>
             <p style="font-size: 1.5em; font-weight: 700;">Тут магія починається з бажання знати.</p>
@@ -246,6 +247,7 @@
     </header>
 
     <section class="artifacts-section">
+	<img src="img/s0.jpg" alt="school СилаВолії" class="hero-image"> 
         <div class="container">
             <h2>Чарівні Артефакти: Інструменти для Твоєї Магії</h2>
             
@@ -285,6 +287,7 @@
     </section>
 
     <section class="lessons-section">
+	<img src="img/16.jpg" alt="school СилаВолії" class="hero-image"> 
         <div class="container">
             <h2>Твої Наступні Уроки</h2>
             <p>Обирай урок, який допоможе тобі стати ще могутнішим!</p>
