--- a/adventures.html
+++ b/adventures.html
@@ -242,6 +242,8 @@
 <body>
 
     <header class="adventures-header section">
+        
+	 <img src="img/15.jpg" alt="Герої СилаВолії" class="hero-image"> 
         <div class="container">
             <h1>ПРИГОДИ, ЩО РОЗКРИВАЮТЬ ГОЛОВНУ ІДЕЮ</h1>
             <p style="font-size: 1.3em;">
@@ -342,4 +344,5 @@
     </footer>
 
 </body>
+
 </html>
