--- a/school.html
+++ b/school.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Школа «ШляхдоМрій» | Магічні Уроки СилаВолії</title>
     
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Pangolin&display=swap" rel="stylesheet">
+  
+
      <link rel="stylesheet" href="style.css">
    
 </head>
