--- a/adventures.html
+++ b/adventures.html
@@ -245,7 +245,7 @@
 
     <header class="adventures-header section">
         
-	 <img src="img/15.jpg" alt="Герої СилаВолії" class="hero-image"> 
+	<!-- <img src="img/15.jpg" alt="Герої СилаВолії" class="hero-image"> -->
         <div class="container">
             <h1>ПРИГОДИ, ЩО РОЗКРИВАЮТЬ ГОЛОВНУ ІДЕЮ</h1>
             <p style="font-size: 1.3em;">
