--- a/adventures.html
+++ b/adventures.html
@@ -35,7 +35,7 @@
                     <div class="moral-lesson">
                         <strong>Урок:</strong> Тільки серце, сповнене віри, знайде дорогу.
                     </div>
-                    <a href="stor/story00.pdf" class="cta-button" style="font-size: 1.2em;">ЧИТАТИ ПРИГОДУ</a>
+                    <a href="stor/story00.html" class="cta-button" style="font-size: 1.2em;">ЧИТАТИ ПРИГОДУ</a>
                 </div>
 				
                 <div class="card story-card">
