Update images and text in story00.html

--- a/stor/story00.html
+++ b/stor/story00.html
@@ -152,19 +152,15 @@
             },
             {
                 text: "У своїх подорожах по країні СилаВолія його супроводжували найкращі друзі: веселий білий мальтипу на ім’я Краш та розумниця рожева балонка Луна. Краш, який завжди носив маленький дзвіночок на нашийнику, міг видавати такий дзвін, що розганяв будь-яку темряву, а його пухнаста шерсть спалахувала яскравим світлом, коли він був натхнений. Луна ж мала на шиї медальйон, який починав світитися теплим світлом, коли вона думала над складною загадкою, допомагаючи їй знайти рішення.",
-                image: "https://placehold.co/600x400/pink/white?text=Crash+and+Luna"
+                image:"st02.jpg"
             },
             {
                 text: "Вони зіткнулися з великою загрозою — демоном-темносилом НаноПутом. Він був схожий на маленьку сіру хмаринку, що пожирала майбутнє. Куди б він не летів, дитячі ігри ставали нудними, а мрії перетворювалися на сірі камінці. НаноПут не кричав, а співав сумну, як осінній вітер, пісню, що змушувала всіх забувати про радісні моменти.",
-                image: "https://placehold.co/600x400/gray/white?text=NanoPoot+Cloud"
+                image: "st03.jpg"
             },
             {
-                text: "<strong>Мандри казковим світом СилаВолія: Пригоди в Місті Солодких Мрій.</strong><br><br>У центрі СилаВолії, де завжди панує сонце, знаходиться місто, збудоване з льодяників та пряників. Воно живиться дитячим сміхом та радістю. Але одного разу хтось починає красти радісні мрії, і місто втрачає свої кольори та солодкий смак.",
-                image: "https://placehold.co/600x400/cyan/white?text=Sweet+Dreams+City"
-            },
-            {
-                text: "Фіну, Крашу та Луні доведеться знайти винуватця і повернути радість жителям міста, використовуючи веселковий дим, дзвін Краша та мудрість Луни. Це може бути історія про те, що щастя не можна вкрасти, а тільки поділитися ним.<br><br><strong>Кінець.</strong>",
-                image: "https://placehold.co/600x400/gold/white?text=The+End"
+                text: "<strong>Мандри казковим світом СилаВолія </strong><br><br>починаються ...",
+                image: "st04.jpg"
             }
         ];
 
