Change hero symbols from hearts to emojis

--- a/heroes.html
+++ b/heroes.html
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 					<div class="hero-symbol-bar" id="fin-image">
-						<a href="#" class="cta-button flip-trigger" style="font-size: 0.5em;">💖</a>
+						<a href="#" class="cta-button flip-trigger" style="font-size: 0.5em;">🌈</a>
 					</div>
 
 					<div class="hero-content">
@@ -57,7 +57,7 @@
 						</div>
 					</div>
 					<div class="hero-symbol-bar" id="krash-image">
-						<a href="#" class="cta-button flip-trigger" style="font-size: 0.5em;">💖</a>
+						<a href="#" class="cta-button flip-trigger" style="font-size: 0.5em;">✨</a>
 					</div>
 
 					<div class="hero-content">
