Update header title in heroes.html

--- a/heroes.html
+++ b/heroes.html
@@ -13,7 +13,7 @@
 
     <header class="heroes-header section">
         <div class="container">
-            <h1>ТРИ СТОВПИ СИЛАВОЛІЇ</h1>
+            <h1>ЧАРІВНА СИЛАВОЛІЯ: ПРИГОДИ ТРЬОХ ДРУЗІВ</h1>
             <p style="font-size: 1.3em;">
                 У серці кожної пригоди — <strong>Фін</strong>, <strong>Краш</strong> та <strong>Луна</strong>. Кожен із них уособлює одну з трьох ключових сил: <strong>Серце</strong>, <strong>Світло</strong> та <strong>Розум</strong>. Їхня сила — у єдності!
             </p>
