--- a/stor/story00.html
+++ b/stor/story00.html
@@ -189,7 +189,7 @@
             // --- НОВА ЛОГІКА ДЛЯ ПІДКАЗКИ ---
             if (index === pages.length - 1) {
                 // Якщо це остання сторінка
-                hintElement.innerHTML = "Історія завершена. <b>Клікніть, щоб почати знову &#8634;</b>";
+                hintElement.innerHTML = "Спробувати ще. <b>Клікніть, щоб почати знову &#8634;</b>";
                 hintElement.style.color = "#d35400"; // Зробимо колір більш помітним (помаранчевим)
             } else {
                 // Якщо це звичайна сторінка
