--- a/stor/story00.html
+++ b/stor/story00.html
@@ -146,16 +146,16 @@
         // Ви можете замінити посилання на свої власні файли (наприклад: 'img/dragon.jpg')
         const pages = [
             {
-                text: "Жив собі дивовижний герой на ім’я Фін, що був сумішшю епічного червоного дракона і рудого собаки такси. Його вигляд був войовничим, але очі світилися добротою, а вуха, як у такси, смішно звисали, коли він був щасливий. Фін був великим любителем сиру та ковбасок, і це завжди піднімало йому настрій, особливо коли він ділився ними зі своїми друзями. Він не дихав вогнем, а натомість видихав веселковий дим, що міг розганяти сум і створювати дивовижні яскраві ілюзії.",
+                text: "Жив собі дивовижний герой на ім’я <strong>Фін</strong>, що був сумішшю епічного червоного дракона і рудого собаки такси. Його вигляд був войовничим, але очі світилися добротою, а вуха, як у такси, смішно звисали, коли він був щасливий. Фін був великим любителем сиру та ковбасок, і це завжди піднімало йому настрій, особливо коли він ділився ними зі своїми друзями. Він не дихав вогнем, а натомість видихав веселковий дим, що міг розганяти сум і створювати дивовижні яскраві ілюзії.",
                 // Тимчасова картинка дракона/собаки з інтернету (placeholder)
                 image: "st01.jpg"
             },
             {
-                text: "У своїх подорожах по країні СилаВолія його супроводжували найкращі друзі: веселий білий мальтипу на ім’я Краш та розумниця рожева балонка Луна. Краш, який завжди носив маленький дзвіночок на нашийнику, міг видавати такий дзвін, що розганяв будь-яку темряву, а його пухнаста шерсть спалахувала яскравим світлом, коли він був натхнений. Луна ж мала на шиї медальйон, який починав світитися теплим світлом, коли вона думала над складною загадкою, допомагаючи їй знайти рішення.",
+                text: "У своїх подорожах по країні <strong>СилаВолія</strong> його супроводжували найкращі друзі: веселий білий мальтипу на ім’я <strong>Краш<s/trong> та розумниця рожева балонка <strong>Луна</strong>. Краш, який завжди носив маленький дзвіночок на нашийнику, міг видавати такий дзвін, що розганяв будь-яку темряву, а його пухнаста шерсть спалахувала яскравим світлом, коли він був натхнений. Луна ж мала на шиї медальйон, який починав світитися теплим світлом, коли вона думала над складною загадкою, допомагаючи їй знайти рішення.",
                 image:"st02.jpg"
             },
             {
-                text: "Вони зіткнулися з великою загрозою — демоном-темносилом НаноПутом. Він був схожий на маленьку сіру хмаринку, що пожирала майбутнє. Куди б він не летів, дитячі ігри ставали нудними, а мрії перетворювалися на сірі камінці. НаноПут не кричав, а співав сумну, як осінній вітер, пісню, що змушувала всіх забувати про радісні моменти.",
+                text: "Вони зіткнулися з великою загрозою — демоном-темносилом <strong>НаноПутом</strong>. Він був схожий на маленьку сіру хмаринку, що пожирала майбутнє. Куди б він не летів, дитячі ігри ставали нудними, а мрії перетворювалися на сірі камінці. НаноПут не кричав, а співав сумну, як осінній вітер, пісню, що змушувала всіх забувати про радісні моменти.",
                 image: "st03.jpg"
             },
             {
