Fix typo in character name in story00.html

--- a/stor/story00.html
+++ b/stor/story00.html
@@ -151,7 +151,7 @@
                 image: "st01.jpg"
             },
             {
-                text: "У своїх подорожах по країні <strong>СилаВолія</strong> його супроводжували найкращі друзі: веселий білий мальтипу на ім’я <strong>Краш<s/trong> та розумниця рожева балонка <strong>Луна</strong>. Краш, який завжди носив маленький дзвіночок на нашийнику, міг видавати такий дзвін, що розганяв будь-яку темряву, а його пухнаста шерсть спалахувала яскравим світлом, коли він був натхнений. Луна ж мала на шиї медальйон, який починав світитися теплим світлом, коли вона думала над складною загадкою, допомагаючи їй знайти рішення.",
+                text: "У своїх подорожах по країні <strong>СилаВолія</strong> його супроводжували найкращі друзі: веселий білий мальтипу на ім’я <strong>Краш</strong> та розумниця рожева балонка <strong>Луна</strong>. Краш, який завжди носив маленький дзвіночок на нашийнику, міг видавати такий дзвін, що розганяв будь-яку темряву, а його пухнаста шерсть спалахувала яскравим світлом, коли він був натхнений. Луна ж мала на шиї медальйон, який починав світитися теплим світлом, коли вона думала над складною загадкою, допомагаючи їй знайти рішення.",
                 image:"st02.jpg"
             },
             {
