Update lesson card details and links in school.html

--- a/school.html
+++ b/school.html
@@ -86,13 +86,13 @@
                 </div>
 
                 <div class="card lesson-card">
-                    <span class="artifact-icon" style="color: var(--color-rainbow-end);">🧪</span>
-                    <h3>Зілля Зоряного Сяйва</h3>
+                    <span class="artifact-icon" style="color: var(--color-rainbow-end);">🪬</span>
+                    <h3>Ментальна арифметика</h3></h3>
                     <span class="lecturer">Викладач: Фін</span>
                     <p>
-                        Як перетворювати сумні думки на світлі ідеї та варити найсмачніші зілля на основі емоцій.
+                        Як перетворювати сумні думки на світлі ідеї.
                     </p>
-                    <a href="lesson_potion.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-rainbow-end);">ПОЧАТИ УРОК</a>
+                    <a href="\neuro\neuro_beads.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-rainbow-end);">ПОЧАТИ УРОК</a>
                 </div>
 
                 <div class="card lesson-card">
