Fix link path for neuro_beads.html

--- a/school.html
+++ b/school.html
@@ -92,7 +92,7 @@
                     <p>
                         Як перетворювати сумні думки на світлі ідеї.
                     </p>
-                    <a href="\neuro\neuro_beads.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-rainbow-end);">ПОЧАТИ УРОК</a>
+                    <a href="neuro/neuro_beads.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-rainbow-end);">ПОЧАТИ УРОК</a>
                 </div>
 
                 <div class="card lesson-card">
