Update link to eco_game.html in school.html

--- a/school.html
+++ b/school.html
@@ -61,7 +61,7 @@
                     <p>
                         Втілює думки в реальність, навчаючи <strong>відповідальності</strong> за свої бажання. Що намалюєш, те й збудеться!
                     </p>
-                    <a href="game_draw_dream.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">НАМАЛЮЙ МРІЮ</a>
+                    <a href="eco_world/eco_game.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">НАМАЛЮЙ МРІЮ</a>
                 </div>
             </div>
         </div>
