Update lesson link to point to set_number.html

--- a/school.html
+++ b/school.html
@@ -82,7 +82,7 @@
                     <p>
                         Навчися знаходити позитив у маленьких речах і створювати потужні Заклинання Сміху.
                     </p>
-                    <a href="lesson_joy.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: #ffc107;">ПОЧАТИ УРОК</a>
+                    <a href="math/set_number.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: #ffc107;">ПОЧАТИ УРОК</a>
                 </div>
 
                 <div class="card lesson-card">
