--- a/neuro/neuro_beads.html
+++ b/neuro/neuro_beads.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>NEURO BEADS — Мобільна Експедиція</title>
+    <title>NEURO BEADS — Збирач Намиста</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="neuro-ocean">
     <header>
         <div class="header-content">
             <div class="logo">NEURO <span>BEADS</span></div>
-            <div class="stats">
-                <div class="rank">Ранг: <span id="rank-name">Початківець</span></div>
-                <div class="pearls-count">✨ Перлини: <span id="pearls-total">0</span>/365</div>
-            </div>
             <button id="sound-btn" class="sound-toggle" aria-label="Перемкнути звук">🔇</button>
         </div>
     </header>
 
     <main class="mobile-wrapper">
+        
+        <div class="mode-switcher">
+            <button class="mode-btn active" onclick="setMode('training')">Тренування</button>
+            <button class="mode-btn" onclick="setMode('game')">Гра (Намисто)</button>
+        </div>
+
+        <div id="necklace-panel" class="necklace-panel hidden">
+            <div class="necklace-container" id="necklace-container">
+                </div>
+            <div class="progress-info">
+                <span>Прогрес перлини: <span id="current-points">0</span>/12 балів</span>
+            </div>
+        </div>
+
         <section class="daily-mission">
             <div class="mission-box">
                 <div id="victory-pearl" class="pearl-container hidden">
@@ -26,25 +36,24 @@
                     <div class="pearl-flash"></div>
                 </div>
 
-                <div class="difficulty-selector">
-                    <span>Цифр:</span>
+                <div id="difficulty-wrapper" class="difficulty-selector">
+                    <span>Розрядність:</span>
                     <select id="digit-select">
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4" selected>4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8 (Mix)</option>
+                        <option value="2">2 (Десятки)</option>
+                        <option value="3">3 (Сотні)</option>
+                        <option value="4" selected>4 (Тисячі)</option>
+                        <option value="5">5 (10 Тисяч)</option>
+                        <option value="6">6 (100 Тисяч)</option>
+                        <option value="7">7 (Мільйони)</option>
                     </select>
                 </div>
 
                 <div id="target-number" class="target-display">Ціль: ????</div>
-                <div id="mission-status" class="status-text">Натисніть "Старт"</div>
+                <div id="mission-status" class="status-text">Оберіть режим</div>
 
                 <div class="controls-panel">
-                    <button onclick="generateMission()" class="mission-btn">Старт</button>
-                    <button onclick="resetAbacus()" class="reset-btn">Reset</button>
+                    <button onclick="generateMission()" class="mission-btn" id="action-btn">Старт</button>
+                    <button onclick="resetAbacus()" class="reset-btn">Скинути</button>
                 </div>
             </div>
         </section>
@@ -59,6 +68,14 @@
         </div>
     </main>
 
+    <div id="grand-victory" class="grand-victory hidden">
+        <div class="victory-content">
+            <h1>🏆 НАМИСТО ЗІБРАНО! 🏆</h1>
+            <p>Ви стали Повелителем Абакуса!</p>
+            <button onclick="restartGame()" class="mission-btn">Почати знову</button>
+        </div>
+    </div>
+
     <audio id="bg-music" loop>
         <source src="ocean-theme.mp3" type="audio/mpeg">
     </audio>
@@ -68,4 +85,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
