--- a/school.html
+++ b/school.html
@@ -61,7 +61,7 @@
                     <p>
                         Втілює думки в реальність, навчаючи <strong>відповідальності</strong> за свої бажання. Що намалюєш, те й збудеться!
                     </p>
-                    <a href="eco_world/eco_game.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">НАМАЛЮЙ МРІЮ</a>
+                    <a href="color_pen/color_pen_pro.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">НАМАЛЮЙ СВІЙ НАСТРІЙ</a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <p>
                         Навчись слухати, розуміти та вирішувати конфлікти за допомогою мудрості та емпатії.
                     </p>
-                    <a href="lesson_friendship.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-joy);">ПОЧАТИ УРОК</a>
+                    <a href="eco_world/eco_game.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px; background: var(--color-joy);">ПОЧАТИ УРОК</a>
                 </div>
                 
             </div>
