--- a/school.html
+++ b/school.html
@@ -41,7 +41,7 @@
                     <p>
                         Реагує на щирі емоції. Чим сильніше ти віриш у себе, тим потужніша твоя магія. Цей артефакт вчить нас <strong>самодовірі</strong>.
                     </p>
-                    <a href="test_faith.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">ПЕРЕВІР СВОЮ ВІРУ</a>
+                    <a href="color_pen/sila.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">ПЕРЕВІР СВОЮ ВІРУ</a>
                 </div>
 
                 <div class="card artifact-card">
