--- a/school.html
+++ b/school.html
@@ -29,6 +29,7 @@
     </header>
 
     <section class="artifacts-section">
+		<img src="img/16.jpg" alt="school СилаВолії" class="hero-image"> 
 	<div class="container">
             <h2>Чарівні Артефакти: Інструменти для Твоєї Магії</h2>
             
@@ -51,7 +52,7 @@
                     <p>
                         Легендарна книга, що містить всю магію світу і реагує на <strong>допитливість</strong>. Вона розкриває свої сторінки лише тим, хто справді прагне знати.
                     </p>
-                    <a href="quiz_knowledge.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">СПРОБУЙ ЗНАЙТИ ВІДПОВІДЬ</a>
+                    <a href="adventures.html" class="cta-button" style="font-size: 0.9em; padding: 10px 20px;">СПРОБУЙ ЗНАЙТИ ВІДПОВІДЬ</a>
                 </div>
 
                 <div class="card artifact-card">
@@ -68,7 +69,7 @@
     </section>
 
     <section class="lessons-section">
-	<img src="img/16.jpg" alt="school СилаВолії" class="hero-image"> 
+	
         <div class="container">
             <h2>Твої Наступні Уроки</h2>
             <p>Обирай урок, який допоможе тобі стати ще могутнішим!</p>
