Update link to adventures.html in school.html

--- a/school.html
+++ b/school.html
@@ -121,7 +121,7 @@
             <p style="font-weight: bold; font-size: 1.2em; margin-top: 20px;">
                 Нагорода: Диплом Справжнього СилаВолія та доступ до ексклюзивних історій!
             </p>
-            <a href="final_exam.html" class="cta-button" style="font-size: 1.5em; margin-top: 20px;">СТАТИ СИЛАВОЛІЄМ (Пройти Тест)</a>
+            <a href="adventures.html" class="cta-button" style="font-size: 1.5em; margin-top: 20px;">СТАТИ СИЛАВОЛІЄМ (Пройти Тест)</a>
         </div>
     </section>
 
