--- a/adventures.html
+++ b/adventures.html
@@ -127,6 +127,9 @@
                 </li>
             </ul>
         </div>
+		 <div style="text-align: center; margin-top: 40px;">
+                <a href="index.html" class="cta-button" style="background-color: #999;">СИЛАВОЛІЯ ↑</a>
+            </div>
     </section>
 
     <footer>
@@ -138,5 +141,6 @@
 </body>
 
 </html>
+
 
 
