Add call-to-action button to world.html

--- a/world.html
+++ b/world.html
@@ -107,7 +107,9 @@
                     <br>• <strong>Дзеркальне Озеро:</strong> Боротьба з внутрішніми страхами.
                 </p>
             </div>
-            
+           <div style="text-align: center; margin-top: 40px;">
+                <a href="index.html" class="cta-button" style="background-color: #999;">СИЛАВОЛІЯ ↑</a>
+            </div> 
         </div>
     </section>
 
