Update text and add call-to-action button in heroes.html

--- a/heroes.html
+++ b/heroes.html
@@ -109,9 +109,12 @@
         <div class="container">
             <h2>ЧОМУ ВОНИ НЕПЕРЕМОЖНІ?</h2>
             <p style="max-width: 800px; margin: 0 auto; font-size: 1.1em; font-weight: 700;">
-                <strong>Фін</strong> (Доброта) знаходить тих, хто сумує. <strong>Краш</strong> (Радість) дає їм енергію, щоб боротися. А <strong>Луна</strong> (Розум) показує їм, як це зробити. Саме ця єдність — <strong>СилаВолії</strong> — перемагає НаноПута!
+                <strong>Фін</strong> (Доброта) знаходить тих, хто сумує. <strong>Краш</strong> (Радість) дає їм енергію, щоб боротися. А <strong>Луна</strong> (Розум) показує їм, як це зробити. Саме ця єдність — <strong>СилаВолії</strong> — перемагає всі перешкоди!
             </p>
         </div>
+		<div style="text-align: center; margin-top: 40px;">
+                <a href="index.html" class="cta-button" style="background-color: #999;">СИЛАВОЛІЯ ↑</a>
+            </div>
     </section>
 
     <footer>
