Change image class from 'map-image' to 'hero-image'

--- a/world.html
+++ b/world.html
@@ -13,7 +13,7 @@
     <section class="world-map-section">
         <div class="container">
             <h1>Безмежний Світ СилаВолії</h1>
-            <img src="img/33.jpg" alt="Інтерактивна карта світу СилаВолії" class="map-image">
+            <img src="img/33.jpg" alt="Інтерактивна карта світу СилаВолії" class="hero-image">
             <p>
                 Натисни на назву місця, щоб дізнатися його таємницю!
             </p>
